chore: update site title and meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Foodee | Discover Easy Recipes</title>
+    <meta
+      name="description"
+      content="Browse and enjoy simple, delicious recipes on Foodee."
+    />
   </head>
   <body>
     <div id="root"></div>
